Try fixing overlay not working on iOS

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
   flex-direction: column;
   min-height: 100vh;
   font-size: 1em;
+  position: relative;
+  -webkit-overflow-scrolling: touch;
 }
 
 .name-title {
